--- a/AutomateWarehouse/Pages/CustomerPage.razor
+++ b/AutomateWarehouse/Pages/CustomerPage.razor
@@ -40,27 +40,31 @@
             {
               @if (dispatchedOrders.Any())
               {
+                int counter = 0;
             <td colspan="7">
+
 
               @foreach (var order in dispatchedOrders)
               {
-                @if (cust.Id == order.CustomerId)
-                {
-                  @count++;
-                  @if (count > 0)
+                <table class="table table-bordered">
+                  @if (cust.Id == order.CustomerId)
                   {
-                    <p>Dispatched orders</p>
-                  }
 
-                  <table class="table table-bordered">
-                    <thead class="thead-dark">
-                      <tr>
-                        <th>OrderDate</th>
-                        <th>Delivery Address</th>
-                        <th>Payment done</th>
-                        <th>Dispatched</th>
-                      </tr>
-                    </thead>
+                    @if (counter == 0)
+                    {
+                      <p>Dispatched orders</p>
+
+                      <thead class="thead-dark">
+                        <tr>
+                          <th>OrderDate</th>
+                          <th>Delivery Address</th>
+                          <th>Payment done</th>
+                          <th>Dispatched</th>
+                        </tr>
+                      </thead>
+                    }
+
+
                     <tbody>
                       <tr>
                         <td>@order.OrderDate</td>
@@ -87,9 +91,10 @@
                         </td>
                       </tr>
                     </tbody>
-                  </table>
-                }
 
+                  }
+                </table>
+                counter++;
               }
 
             </td>
@@ -239,7 +244,6 @@ else
 }
 
 @code {
-      int count = 0;
       private List<Customer> customers;
       private List<Order> dispatchedOrders;
       private List<Order> activeOrders;
