--- a/AutomateWarehouse/Pages/Orders.razor
+++ b/AutomateWarehouse/Pages/Orders.razor
@@ -187,7 +187,7 @@
                                             {
                                                 if (counter == 0)
                                                 {
-                                                    <td colspan="10" align="center">
+                                                    <td colspan="6" align="center">
                                                         <p>Order lines</p>
                                                     </td>
 
@@ -202,7 +202,7 @@
                                                         </tr>
                                                     </thead>
                                                 }
-                                                <tbody colspan="6">
+                                                <tbody >
                                                     <tr>
                                                         <td>@orderLine.Id</td>
                                                         <td>@orderLine.ProductId</td>
@@ -229,7 +229,7 @@
                 }
             }
         </tbody>
-    </table>>
+    </table>
 </div>
 
 
