--- a/AutomateWarehouse/Pages/CustomerPage.razor
+++ b/AutomateWarehouse/Pages/CustomerPage.razor
@@ -200,32 +200,37 @@
           </div>
         </EditForm>
       </div>
-      <div class="col-5 bg-light m-2 justify-content-start">
-        <div class="p-3 mb-3 bg-secondary text-white text-center">
-          Edit Customer
-        </div>
-        <EditForm Model="@UpdateCustomer" OnValidSubmit="(() => EditCustomer())">
-          <DataAnnotationsValidator />
-          <ValidationSummary />
-          <div class="form-group">
-            @*Binder respektive värde nedanför till objektet NewEmployee*@
-            <label for="name">Name</label>
-            <input type="type" id="name" class="form-control" @bind-value="@UpdateCustomer.Name" />
-          </div>
-          <div class="form-group">
-            <label for="phone">Phone</label>
-            <input type="type" id="name" class="form-control" @bind-value="@UpdateCustomer.Phone" />
-          </div>
-          <div class="form-group">
-            <label for="email">Email</label>
-            <input type="type" id="name" class="form-control" @bind-value="@UpdateCustomer.Email" />
-          </div>
 
-          <div class="text-center p-3 mb-3">
-            <button class="btn btn-info" type="submit">Edit Customer</button>
+      @if (UpdateCustomer.Id > 0)
+      {
+        <div class="col-5 bg-light m-2 justify-content-start">
+          <div class="p-3 mb-3 bg-secondary text-white text-center">
+            Edit Customer
           </div>
-        </EditForm>
-      </div>
+          <EditForm Model="@UpdateCustomer" OnValidSubmit="(() => EditCustomer())">
+            <DataAnnotationsValidator />
+            <ValidationSummary />
+            <div class="form-group">
+              @*Binder respektive värde nedanför till objektet NewEmployee*@
+              <label for="name">Name</label>
+              <input type="type" id="name" class="form-control" @bind-value="@UpdateCustomer.Name" />
+            </div>
+            <div class="form-group">
+              <label for="phone">Phone</label>
+              <input type="type" id="name" class="form-control" @bind-value="@UpdateCustomer.Phone" />
+            </div>
+            <div class="form-group">
+              <label for="email">Email</label>
+              <input type="type" id="name" class="form-control" @bind-value="@UpdateCustomer.Email" />
+            </div>
+
+            <div class="text-center p-3 mb-3">
+              <button class="btn btn-info" type="submit">Edit Customer</button>
+            </div>
+          </EditForm>
+        </div>
+      }
+
     </div>
 
     <div class="row m-5">
