--- a/AutomateWarehouse/Pages/CustomerPage.razor
+++ b/AutomateWarehouse/Pages/CustomerPage.razor
@@ -7,8 +7,70 @@
 
 @if (customers.Any())
 {
-  <div class="container">
+<div class="container">
+    <div class="row m-5">
+        <div class="col-5 bg-light m-2 justify-content-start">
+            <div class="p-3 mb-3 bg-secondary text-white text-center">
+                Add new Customer
+            </div>
+            <EditForm Model="@NewCustomer" OnValidSubmit="@AddNewCustomer">
+                <DataAnnotationsValidator />
+                <ValidationSummary />
+                <div class="form-group">
+                    @*Binder respektive värde nedanför till objektet NewEmployee*@
+                    <label for="name">Name</label>
+                    <input type="type" id="name" class="form-control" @bind-value="@NewCustomer.Name" />
+                </div>
+                <div class="form-group">
+                    <label for="phone">Phone</label>
+                    <input type="type" id="name" class="form-control" @bind-value="@NewCustomer.Phone" />
+                </div>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="type" id="name" class="form-control" @bind-value="@NewCustomer.Email" />
+                </div>
 
+                <div class="text-center p-3 mb-3">
+                    <button class="btn btn-info" type="submit">Add Customer</button>
+                </div>
+            </EditForm>
+        </div>
+        @if (editCustomer) 
+        {
+        <div class="col-5 bg-light m-2 justify-content-start">
+            <div class="p-3 mb-3 bg-secondary text-white text-center">
+                Edit Customer
+            </div>
+            <EditForm Model="@UpdateCustomer" OnValidSubmit="(() => EditCustomer())">
+                <DataAnnotationsValidator />
+                <ValidationSummary />
+                <div class="form-group">
+                    @*Binder respektive värde nedanför till objektet NewEmployee*@
+                    <label for="name">Name</label>
+                    <input type="type" id="name" class="form-control" @bind-value="@UpdateCustomer.Name" />
+                </div>
+                <div class="form-group">
+                    <label for="phone">Phone</label>
+                    <input type="type" id="name" class="form-control" @bind-value="@UpdateCustomer.Phone" />
+                </div>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="type" id="name" class="form-control" @bind-value="@UpdateCustomer.Email" />
+                </div>
+
+                <div class="text-center p-3 mb-3">
+                    <button class="btn btn-info" type="submit">Edit Customer</button>
+                </div>
+            </EditForm>
+        </div>
+        }
+    </div>
+
+    <div class="row m-5">
+
+    </div>
+
+</div>
     <table class="table table-bordered">
       <thead class="thead-dark">
         <tr>
@@ -26,13 +88,13 @@
         @foreach (var cust in customers)
         {
           <tr>
-            <td>@cust.Name</td>
-            <td>@cust.Phone</td>
-            <td>@cust.Email</td>
-            <td><button class="btn btn-info" @onclick="(() => SetCustomerForDispatchedOrders(cust))">Dispatched orders </button></td>
-            <td><button class="btn btn-info" @onclick="(() => SetCustomerForActiveOrders(cust))">Active orders</button></td>
-            <td><button class="btn btn-danger" @onclick="(() => DeleteCustomer(cust))">Delete</button></td>
-            <td><button class="btn btn-info" @onclick="(() => SetCustomerForEdit(cust))">Edit</button></td>
+              <td>@cust.Name</td>
+              <td>@cust.Phone</td>
+              <td>@cust.Email</td>
+              <td><button class="btn btn-info" @onclick="(() => SetCustomerForDispatchedOrders(cust))">Show </button></td>
+              <td><button class="btn btn-info" @onclick="(() => SetCustomerForActiveOrders(cust))">Show</button></td>
+              <td><button class="btn btn-info" @onclick="(() => SetCustomerForEdit(cust))">Edit</button></td>
+              <td><button class="btn btn-danger" @onclick="(() => DeleteCustomer(cust))">Delete</button></td>
           </tr>
           <tr>
 
@@ -173,66 +235,7 @@
     </table>
 
 
-    <div class="row m-5">
-      <div class="col-5 bg-light m-2 justify-content-start">
-        <div class="p-3 mb-3 bg-secondary text-white text-center">
-          Add new Customer
-        </div>
-        <EditForm Model="@NewCustomer" OnValidSubmit="@AddNewCustomer">
-          <DataAnnotationsValidator />
-          <ValidationSummary />
-          <div class="form-group">
-            @*Binder respektive värde nedanför till objektet NewEmployee*@
-            <label for="name">Name</label>
-            <input type="type" id="name" class="form-control" @bind-value="@NewCustomer.Name" />
-          </div>
-          <div class="form-group">
-            <label for="phone">Phone</label>
-            <input type="type" id="name" class="form-control" @bind-value="@NewCustomer.Phone" />
-          </div>
-          <div class="form-group">
-            <label for="email">Email</label>
-            <input type="type" id="name" class="form-control" @bind-value="@NewCustomer.Email" />
-          </div>
-
-          <div class="text-center p-3 mb-3">
-            <button class="btn btn-info" type="submit">Add Customer</button>
-          </div>
-        </EditForm>
-      </div>
-      <div class="col-5 bg-light m-2 justify-content-start">
-        <div class="p-3 mb-3 bg-secondary text-white text-center">
-          Edit Customer
-        </div>
-        <EditForm Model="@UpdateCustomer" OnValidSubmit="(() => EditCustomer())">
-          <DataAnnotationsValidator />
-          <ValidationSummary />
-          <div class="form-group">
-            @*Binder respektive värde nedanför till objektet NewEmployee*@
-            <label for="name">Name</label>
-            <input type="type" id="name" class="form-control" @bind-value="@UpdateCustomer.Name" />
-          </div>
-          <div class="form-group">
-            <label for="phone">Phone</label>
-            <input type="type" id="name" class="form-control" @bind-value="@UpdateCustomer.Phone" />
-          </div>
-          <div class="form-group">
-            <label for="email">Email</label>
-            <input type="type" id="name" class="form-control" @bind-value="@UpdateCustomer.Email" />
-          </div>
-
-          <div class="text-center p-3 mb-3">
-            <button class="btn btn-info" type="submit">Edit Customer</button>
-          </div>
-        </EditForm>
-      </div>
-    </div>
-
-    <div class="row m-5">
-
-    </div>
-
-  </div>
+    
 }
 else if (loadFailed)
 {
@@ -244,82 +247,85 @@ else
 }
 
 @code {
-      private List<Customer> customers;
-      private List<Order> dispatchedOrders;
-      private List<Order> activeOrders;
-      private bool loadFailed;
-      Customer NewCustomer = new Customer();
-      Customer UpdateCustomer = new Customer();
-      Customer DispatchedCustomer = new Customer();
-      Customer ActiveCustomer = new Customer();
+    private List<Customer> customers;
+    private List<Order> dispatchedOrders;
+    private List<Order> activeOrders;
+    private bool loadFailed;
+    Customer NewCustomer = new Customer();
+    Customer UpdateCustomer = new Customer();
+    Customer DispatchedCustomer = new Customer();
+    Customer ActiveCustomer = new Customer();
+    bool editCustomer = false;
 
-      protected override async Task OnInitializedAsync()
-      {
+    protected override async Task OnInitializedAsync()
+    {
         customers = await customerRepo.GetCustomerAsync();
-      }
+    }
 
-      //Add a new Cutomer by calling the repository. Create a new object wo erase the old.
-      private async Task AddNewCustomer()
-      {
+    //Add a new Cutomer by calling the repository. Create a new object wo erase the old.
+    private async Task AddNewCustomer()
+    {
         try
         {
-          loadFailed = false;
-          await customerRepo.AddCustomerAsync(NewCustomer);
-          NewCustomer = new Customer();
-          await UpdateGUI();
+            loadFailed = false;
+            await customerRepo.AddCustomerAsync(NewCustomer);
+            NewCustomer = new Customer();
+            await UpdateGUI();
         }
         catch (Exception ex)
         {
-          loadFailed = true;
+            loadFailed = true;
         }
-      }
+    }
 
-      //Delete a customer by calling method in repository.
-      private async Task DeleteCustomer(Customer customer)
-      {
+    //Delete a customer by calling method in repository.
+    private async Task DeleteCustomer(Customer customer)
+    {
         await customerRepo.DeleteCustomerAsync(customer);
         await UpdateGUI();
-      }
+    }
 
-      private void SetCustomerForEdit(Customer selected)
-      {
+    private void SetCustomerForEdit(Customer selected)
+    {
+        editCustomer = true;
         UpdateCustomer = selected;
-      }
-      //Edit a customer by calling method in repository.
-      private async Task EditCustomer()
-      {
+    }
+    //Edit a customer by calling method in repository.
+    private async Task EditCustomer()
+    {
         await customerRepo.EditCustomerAsync(UpdateCustomer);
         UpdateCustomer = new Customer();
+        editCustomer = false;
         await UpdateGUI();
-      }
+    }
 
-      public async Task SetCustomerForDispatchedOrders(Customer selected)
-      {
+    public async Task SetCustomerForDispatchedOrders(Customer selected)
+    {
         if (activeOrders != null)
         {
-          activeOrders.Clear();
+            activeOrders.Clear();
         }
         ActiveCustomer = new Customer();
         DispatchedCustomer = selected;
         dispatchedOrders = await customerRepo.ShowDispatchedOrdersByCustomer(DispatchedCustomer);
         await UpdateGUI();
-      }
+    }
 
-      public async Task SetCustomerForActiveOrders(Customer selected)
-      {
+    public async Task SetCustomerForActiveOrders(Customer selected)
+    {
         if (dispatchedOrders != null)
         {
-          dispatchedOrders.Clear();
+            dispatchedOrders.Clear();
         }
         DispatchedCustomer = new Customer();
         ActiveCustomer = selected;
         activeOrders = await customerRepo.ShowActiveOrdersByCustomer(ActiveCustomer);
         await UpdateGUI();
-      }
+    }
 
-      //To update the GUI by fetching from database async.
-      private async Task UpdateGUI()
-      {
+    //To update the GUI by fetching from database async.
+    private async Task UpdateGUI()
+    {
         customers = await customerRepo.GetCustomerAsync();
-      }
+    }
 }
