Lite tabellfix med orderlines

--- a/AutomateWarehouse/Pages/Orders.razor
+++ b/AutomateWarehouse/Pages/Orders.razor
@@ -196,11 +196,11 @@
                                             {
                                                 if (counter == 0)
                                                 {
-                                                    <td colspan="6" align="center">
+                                                    @*<td colspan="6" align="center">
                                                         <p>Order lines</p>
-                                                    </td>
+                                                    </td>*@
 
-                                                    <thead class="thead-dark">
+                                                    <thead class="thead-light">
                                                         <tr>
                                                             <th>Order line Id</th>
                                                             <th>Product Id</th>
