--- a/AutomateWarehouse/Pages/CustomerPage.razor
+++ b/AutomateWarehouse/Pages/CustomerPage.razor
@@ -3,6 +3,7 @@
 @*@inject CustomerRepository customerRepo*@
 @inject ICustomerRepository customerRepo
 
+<h1>Customer</h1>
 <div class="row m-5">
   <div class="col-5 bg-light m-2 justify-content-start">
     <div class="p-3 mb-3 bg-secondary text-white text-center">
