--- a/AutomateWarehouse/Pages/CustomerPage.razor
+++ b/AutomateWarehouse/Pages/CustomerPage.razor
@@ -3,7 +3,7 @@
 @*@inject CustomerRepository customerRepo*@
 @inject ICustomerRepository customerRepo
 
-<h1>Customer</h1>
+<h1>Customers</h1>
 <div class="row m-5">
   <div class="col-5 bg-light m-2 justify-content-start">
     <div class="p-3 mb-3 bg-secondary text-white text-center">
@@ -85,13 +85,13 @@
         @foreach (var cust in customers)
         {
           <tr>
-            <td>@cust.Name</td>
-            <td>@cust.Phone</td>
-            <td>@cust.Email</td>
-            <td><button class="btn btn-info" @onclick="(() => SetCustomerForDispatchedOrders(cust))">Dispatched orders </button></td>
-            <td><button class="btn btn-info" @onclick="(() => SetCustomerForActiveOrders(cust))">Active orders</button></td>
-            <td><button class="btn btn-danger" @onclick="(() => DeleteCustomer(cust))">Delete</button></td>
-            <td><button class="btn btn-info" @onclick="(() => SetCustomerForEdit(cust))">Edit</button></td>
+              <td>@cust.Name</td>
+              <td>@cust.Phone</td>
+              <td>@cust.Email</td>
+              <td><button class="btn btn-info" @onclick="(() => SetCustomerForDispatchedOrders(cust))">Dispatched orders </button></td>
+              <td><button class="btn btn-info" @onclick="(() => SetCustomerForActiveOrders(cust))">Active orders</button></td>
+              <td><button class="btn btn-info" @onclick="(() => SetCustomerForEdit(cust))">Edit</button></td>
+              <td><button class="btn btn-danger" @onclick="(() => DeleteCustomer(cust))">Delete</button></td>
           </tr>
           <tr>
 
