Tog bort Form-type

--- a/AutomateWarehouse/Pages/CustomerPage.razor
+++ b/AutomateWarehouse/Pages/CustomerPage.razor
@@ -14,15 +14,15 @@
       <ValidationSummary />
       <div class="form-group">
         <label for="name">Name</label>
-        <input type="type" id="name" class="form-control" @bind-value="@NewCustomer.Name" />
+        <input id="name" class="form-control" @bind-value="@NewCustomer.Name" />
       </div>
       <div class="form-group">
         <label for="phone">Phone</label>
-        <input type="type" id="name" class="form-control" @bind-value="@NewCustomer.Phone" />
+        <input id="name" class="form-control" @bind-value="@NewCustomer.Phone" />
       </div>
       <div class="form-group">
         <label for="email">Email</label>
-        <input type="type" id="name" class="form-control" @bind-value="@NewCustomer.Email" />
+        <input id="name" class="form-control" @bind-value="@NewCustomer.Email" />
       </div>
 
       <div class="text-center p-3 mb-3">
@@ -43,15 +43,15 @@
         <ValidationSummary />
         <div class="form-group">
           <label for="name">Name</label>
-          <input type="type" id="name" class="form-control" @bind-value="@UpdateCustomer.Name" />
+          <input  id="name" class="form-control" @bind-value="@UpdateCustomer.Name" />
         </div>
         <div class="form-group">
           <label for="phone">Phone</label>
-          <input type="type" id="name" class="form-control" @bind-value="@UpdateCustomer.Phone" />
+          <input id="name" class="form-control" @bind-value="@UpdateCustomer.Phone" />
         </div>
         <div class="form-group">
           <label for="email">Email</label>
-          <input type="type" id="name" class="form-control" @bind-value="@UpdateCustomer.Email" />
+          <input  id="name" class="form-control" @bind-value="@UpdateCustomer.Email" />
         </div>
 
         <div class="text-center p-3 mb-3">
